--- a/index.html
+++ b/index.html
@@ -7,54 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="jneves2.png" type="image/x-icon">
 
-    <!-- See https://goo.gl/OOhYW5 -->
-    <link rel="manifest" href="manifest.json">
-
-    <!-- See https://goo.gl/qRE0vM -->
-    <meta name="theme-color" content="#000000">
-
-    <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="App">
-
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="App">
-
-    <!-- Homescreen icons -->
-    <link rel="apple-touch-icon" href="jneves2.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="jneves2.png">
-    <link rel="apple-touch-icon" sizes="96x96" href="jneves2.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="jneves2.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="jneves2.png">
-
-    <!-- Tile icon for Windows 8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="jneves2.png">
-    <meta name="msapplication-TileColor" content="#000000">
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <!-- Default twitter cards -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@username">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="app">
-    <meta property="og:image" content="jneves2.png" />
-
-    <!-- Performance tip: hint to the browser to start the handshake for the fonts site -->
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <script>
-      // Load and register pre-caching Service Worker
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('service-worker.js', {
-            scope: '/',
-          });
-        });
-      }
-
-      window.process = { env: { NODE_ENV: 'production' } };
-    </script>
 
 </head>
 <body>
@@ -770,35 +722,17 @@
 
     <script src="main.js"></script>
 
-    
     <script>
+        // Register the Service Worker
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then(registration => {
+            navigator.serviceWorker.register('sw.js')
+                .then((registration) => {
                     console.log('Service Worker registered with scope:', registration.scope);
                 })
-                .catch(error => {
+                .catch((error) => {
                     console.log('Service Worker registration failed:', error);
                 });
         }
-
-        const links = document.querySelectorAll('.link');
-        const modal = document.getElementById('modal');
-        const modalContent = document.getElementById('modal-content');
-        const modalClose = document.querySelector('.modal-close');
-
-
-
-        modalClose.addEventListener('click', (e) => {
-            e.preventDefault();
-            modal.style.display = 'none';
-        });
-
-        window.addEventListener('click', (e) => {
-            if (e.target === modal) {
-                modal.style.display = 'none';
-            }
-        });
     </script>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
