--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="jneves2.png" type="image/x-icon">
-
+    <link rel="stylesheet" href="manifest.json">
 
 </head>
 <body>
