--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="jneves2.png" type="image/x-icon">
-    <link rel="stylesheet" href="manifest.json">
+    <link rel="manifest" href="manifest.json">
 
+    
 </head>
 <body>
     <main>
