--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
             <article class="about active" data-page="about">
                 <header>
-                    <h2 class="h2 article-title">About me</h2>
+                    <h2 class="h2 article-title">Hey</h2>
                 </header>
 
-                <section class="service">
+                <section style="color: white; font-size: 1rem;" class="service">
                     <p>I'm from Providence, Rhode Island. I'm the founder of Binauralbeatgenerator.com and Occu.ltd...</p>
                     <p>My job is to build your website so that it is functional and user-friendly but at the same time attractive. Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring across your message and identity in the most creative way. I created web design for many famous brand companies.</p>
                 </section>
