--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <aside class="sidebar " data-sidebar>
             <div class="sidebar-info">
                 <figure class="avatar-box">
-                    <img style="border-radius: 15%; filter: grayscale(100%);" src="jneves2.png" alt="avatar" width="80">
+                    <img style="border-radius: 15%; filter: grayscale(100%);" src="justinsgiff.jpg" alt="avatar" width="80">
                 </figure>
 
                 <div class="info-content">
