--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <article class="about active" data-page="about">
                 <header>
-                    <h2 class="h2 article-title">Hey</h2>
+                    <h2 class="h2 article-title">Personal Technical Agent</h2>
                 </header>
 
                 <section style="color: white; font-size: 1rem;" class="service">
