--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
                     <ul class="clients-list has-scrollbar">
                         <li class="clients-item">
-                            <a href="#"><img src="https://i.postimg.cc/YqfKyG66/logo-1-color.png" alt="logo"></a>
+                            <a href="#"><img src="naileditw.png" alt="logo"></a>
                         </li>
 
                         <li class="clients-item">
